# grand-pattern-embedded

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: fleet.rs  gossip.rs  graph.rs  jepa.rs  lib.rs  murmur.rs  room.rs  transport.rs
tests/: embedded.rs
